--- a/sys-cluster/torque/ChangeLog
+++ b/sys-cluster/torque/ChangeLog
@@ -1,6 +1,43 @@
 # ChangeLog for sys-cluster/torque
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/torque/ChangeLog,v 1.132 2012/01/18 16:36:24 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/torque/ChangeLog,v 1.141 2012/04/25 16:43:11 jlec Exp $
+
+  25 Apr 2012; Justin Lecher <jlec@gentoo.org> torque-2.3.13.ebuild,
+  torque-2.4.16.ebuild, torque-3.0.3.ebuild, torque-3.0.4.ebuild:
+  Drop unnessecary die
+
+  08 Mar 2012; Brent Baude <ranger@gentoo.org> torque-2.4.16.ebuild:
+  Marking torque-2.4.16 ppc64 for bug 397831
+
+  07 Mar 2012; Justin Bronder <jsbronder@gentoo.org> torque-3.0.4.ebuild,
+  metadata.xml:
+  Enable nvidia gpu support re #400991
+
+*torque-3.0.4 (07 Mar 2012)
+
+  07 Mar 2012; Justin Bronder <jsbronder@gentoo.org> +torque-3.0.4.ebuild:
+  version bump
+
+  07 Mar 2012; Justin Bronder <jsbronder@gentoo.org> torque-2.3.13.ebuild,
+  torque-2.4.16.ebuild, torque-2.5.9.ebuild, torque-3.0.3.ebuild:
+  Correctly update src_uri
+
+  07 Mar 2012; Justin Bronder <jsbronder@gentoo.org> torque-2.3.13.ebuild,
+  torque-2.4.16.ebuild, torque-2.5.9.ebuild, torque-3.0.3.ebuild:
+  Update homepage and src_uri
+
+  07 Mar 2012; Justin Bronder <jsbronder@gentoo.org>
+  -files/0003-disable-automagic-doc-building-2.4.12.patch,
+  -torque-2.4.14.ebuild:
+  cleanup old
+
+  06 Mar 2012; Brent Baude <ranger@gentoo.org> torque-2.4.16.ebuild:
+  Marking torque-2.4.16 ppc for bug 397831
+
+  23 Feb 2012; Kacper Kowalik <xarthisius@gentoo.org> torque-2.3.13.ebuild,
+  torque-2.4.14.ebuild, torque-2.4.16.ebuild:
+  Fix dependency on app-doc/doxygen wrt converting useflag 'nodot' to 'dot'.
+  Fixes bug 405457 by Marien Zwart <marienz@gentoo.org>
 
   18 Jan 2012; Jeroen Roovers <jer@gentoo.org> torque-2.4.16.ebuild:
   Stable for HPPA (bug #397831).
